# odev-internship-2020-test

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/nginx/: Dockerfile  host.conf
docker/python/: Dockerfile  uwsgi.ini
exchange_rates/: settings.py  urls.py
rates_api/: serializers.py  services.py  tests.py  urls.py  views.py
